ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbk8sing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sbk8s-svc
                port:
                  number: 8080
